--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>Analyze your speech!</h1>
 
     <section class="main-controls">
-        <canvas class="visualizer" height="60px"></canvas>
+        <canvas class="visualizer" style="display: none" height="60px"></canvas>
         <div id="buttons">
           <button class="record">Record</button>
           <button class="stop">Stop</button>
