--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <title>Public Speaking Coach</title>
   </head>
   <body>
-    <h1>Analyze your speech!</h1>
+    <h1>Public Speaking Coach</h1>
+    <h2>Analyze your speech!</h2>
 
     <section class="main-controls">
         <canvas class="visualizer" style="display: none" height="60px"></canvas>
