testing rev_node

--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
 
     <!-- Below is your custom application script -->
     <script src="scripts/app.js"></script>
+    <script type="module" src="rev_node.js"></script>
   </body>
 </html>
