--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         </div>
     </section>
 
+    <section class="speech analysis">
+        <h2>Fillers:</h2>
+        <h3>Uh count:</h3>
+        <h3>Um count:</h3>
+    </section>
+
     <section class="sound-clips"></section>
 
     <!-- Optional JavaScript -->
