--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
         </div>
     </section>
 
-    <section class="speech analysis">
+    <section class="speech-analysis">
         <h2>Fillers:</h2>
-        <h3>Uh count:</h3>
-        <h3>Um count:</h3>
     </section>
 
     <section class="sound-clips"></section>
@@ -41,5 +39,6 @@
     <!-- Below is your custom application script -->
     <script src="scripts/app.js"></script>
     <script type="module" src="rev_node.js"></script>
+    <script src="scripts/text_processing.js"></script>
   </body>
 </html>
