--- a/index.html
+++ b/index.html
@@ -8,13 +8,22 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="styles/app.css" rel="stylesheet" type="text/css">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
     <title>Public Speaking Coach</title>
   </head>
   <body>
-    <h1>Public Speaking Coach</h1>
-    <h2>Analyze your speech!</h2>
+    <h1>PUBLIC SPEAKING COACH</h1>
+    <h2>Track the frequency of fillers!</h2>
+
+    <div class="field">
+        <h3>You can also specify a word to track here:</h3>
+        <div class="inline">
+            <input type="text" id="tracked-word" placeholder="Enter word to track here"></input>
+            <button class="track">Track!</button>
+        </div>
+    </div>
+
     <h3>Click record to start recording, and then click stop when you're done talking.</h3>
 
     <section class="main-controls">
@@ -39,8 +48,8 @@
     <script src="scripts/mediaDevices-getUserMedia-polyfill.js"></script>
 
     <!-- Below is your custom application script -->
-    <script src="scripts/app.js"></script>
     <script type="module" src="rev_node.js"></script>
     <script src="scripts/text_processing.js"></script>
+    <script src="scripts/app.js"></script>
   </body>
 </html>
