--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link href="styles/app.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
-    <title>Public Speaking Coach</title>
+    <title>Filler Word Tracker</title>
   </head>
   <body>
-    <h1>PUBLIC SPEAKING COACH</h1>
+    <h1>FILLER WORD TRACKER</h1>
     <h2>Track the frequency of fillers!</h2>
 
     <div class="field">
@@ -34,11 +34,15 @@
         </div>
     </section>
 
+    <section class="transcription-status"></section>
+
     <section class="speech-analysis">
         <h2>Fillers:</h2>
     </section>
 
-    <section class="sound-clips"></section>
+    <section class="sound-clips">
+        <h2>Listen to all recorded clips:</h2>
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
